--- a/demo/manifest.yml
+++ b/demo/manifest.yml
@@ -1,10 +1,9 @@
-- name: MySQL Workbench
+- name: mysql_workbench
   display_name: MySQL Workbench
   comment: 连接 MySQL 的工具，可以用来执行 SQL 和设计表结构
   version: 0.1
-  category: database
-  type: app
+  type: general
+  tags:
+    - database
   protocols:
     - mysql
-  
-
