--- a/chrome/manifest.yml
+++ b/chrome/manifest.yml
@@ -4,8 +4,9 @@ version: 0.1
 comment: Chrome Browser Open URL Page Address
 author: JumpServer Team
 exec_type: python
+update_policy: always
 type: web
 tags:
   - web
 protocols:
-  - web
+  - http
