--- a/mysql_workbench8/manifest.yml
+++ b/mysql_workbench8/manifest.yml
@@ -1,8 +1,11 @@
 name: mysql_workbench8
 display_name: MySQL Workbench8
+comment: A tool for working with MySQL, to execute SQL and design tables
 version: 0.1
 exec_type: python
+author: Eric
 type: general
+update_policy: none
 tags:
   - database
 protocols:
