perf: 目录结构与其他项目一致

--- a/http_server.conf
+++ b/http_server.conf
@@ -4,7 +4,6 @@ server {
     client_max_body_size 5000m;
 
     location /download/applets/ {
-        alias /opt/download/;
+        alias /opt/applets/;
     }
 }
-
