--- a/Dockerfile.loong64
+++ b/Dockerfile.loong64
@@ -14,7 +14,7 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked,id=applets \
 WORKDIR /opt/applets
 COPY requirements.txt requirements.txt
 
-RUN RUN --mount=type=cache,target=/root/.cache/pip \
+RUN --mount=type=cache,target=/root/.cache/pip \
     set -ex \
     && mkdir pip_packages build \
     && pip config set global.index-url ${PIP_MIRROR} \
