--- a/demo/manifest.yml
+++ b/demo/manifest.yml
@@ -1,6 +1,6 @@
 name: mysql_workbench
-display_name: MySQL Workbench
-comment: A tool for working with MySQL, to execute SQL and design tables
+display_name: "{{ 'MySQL Workbench' | trans }}"
+comment: "{{ 'A tool for working with MySQL, to execute SQL and design tables' | trans }}"
 version: 0.1
 author: Eric
 type: general
@@ -9,3 +9,15 @@ tags:
   - database
 protocols:
   - mysql
+
+i18n:
+  MySQL Workbench:
+    en: MySQL Workbench
+    zh: MySQL Workbench
+    ja: MySQL Workbench
+
+  A tool for working with MySQL, to execute SQL and design tables:
+    en: A tool for working with MySQL, to execute SQL and design tables
+    zh: 用于与MySQL一起工作的工具，用于执行SQL和设计表
+    ja: MySQLでSQLを実行し、テーブルを設計するためのツール
+
