--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pywinauto==0.6.8
-selenium==4.14.0
-pywin32==306
-PyYAML==6.0.1
+pywinauto>=0.6.8
+selenium>=4.14.0
+pywin32>=306
+PyYAML>=6.0.1
+cffi>=1.16.0
